# eigen_tests

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt  test2.cpp  test3.cpp
src/: inverter.cpp  inverter.hpp  test1.cpp  test4.cpp  test_inverter.cpp
swig/: CMakeLists.txt  test_inverter.py
swig/pyinverter/: __init__.py  extensions.py  inverter_wrapper.py
